--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<description>A Solr bundle that embeds Solr 4 into OSGi and makes an embeded server available or references a remote server.</description>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>
+		<maven.test.redirectTestOutputToFile>false</maven.test.redirectTestOutputToFile>
 	</properties>
 	<scm>
 		<connection>scm:git:git://github.com/sakaiproject/solr.git</connection>
@@ -377,7 +377,17 @@
 		<dependency>
 			<groupId>org.sakaiproject.nakamura</groupId>
 			<artifactId>org.sakaiproject.nakamura.core</artifactId>
-			<version>1.3.2</version>
+			<version>1.5.1-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.codehaus.woodstox</groupId>
+					<artifactId>woodstox-core-asl</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.codehaus.woodstox</groupId>
+					<artifactId>stax2-api</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
       <groupId>org.sakaiproject.nakamura</groupId>
